--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga doloremque culpa, sequi doloribus voluptatum natus id sunt excepturi repellat. Veritatis!
     </div> -->
     <!-- nav>ul.navList>(li.navListItem>a[href="#"])*4 -->
-    <nav>
+    <!-- <nav>
         <ul class="navList">
             <li class="navListItem"><a href="https://www.google.com.ua/?hl=ru" title="home">home</a></li>
             <li class="navListItem"><a href="#" title="about">about</a></li>
@@ -43,7 +43,19 @@
         <li>Officiis minima molestias culpa necessitatibus vitae velit ullam impedit placeat.</li>
         <li>Delectus autem obcaecati pariatur incidunt laudantium nobis, ducimus magnam at.</li>
         <li>Sapiente consequuntur illo repudiandae autem nihil laboriosam recusandae quam aliquid!</li>
+        <li>Officiis minima molestias culpa necessitatibus vitae velit ullam impedit placeat.</li>
+        <li>Delectus autem obcaecati pariatur incidunt laudantium nobis, ducimus magnam at.</li>
+        <li>Sapiente consequuntur illo repudiandae autem nihil laboriosam recusandae quam aliquid!</li>
+        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor, fugiat.</li>
+        <li>Vel architecto delectus harum dolor omnis itaque nesciunt corporis recusandae!</li>
+        <li>Officiis minima molestias culpa necessitatibus vitae velit ullam impedit placeat.</li>
+        <li>Delectus autem obcaecati pariatur incidunt laudantium nobis, ducimus magnam at.</li>
+        <li>Sapiente consequuntur illo repudiandae autem nihil laboriosam recusandae quam aliquid!</li>
+        <li>Officiis minima molestias culpa necessitatibus vitae velit ullam impedit placeat.</li>
+        <li>Delectus autem obcaecati pariatur incidunt laudantium nobis, ducimus magnam at.</li>
+        <li>Sapiente consequuntur illo repudiandae autem nihil laboriosam recusandae quam aliquid!</li>
     </ul>
+
     <div class='parent'>
         <div>Lorem ipsum dolor sit amet.</div>
         <span>Aspernatur minima magnam ipsam veniam.</span>
@@ -51,6 +63,115 @@
         <span>Recusandae unde odit laudantium tempore?</span>
         <div>Totam eos consequuntur enim ut.</div>
     </div>
-    <button>I am the button</button>
+    <button>I am the button</button> -->
+
+    <!-- part 3 -->
+    <!-- <table>
+        <caption>Table Caption</caption>
+        <thead>
+            <tr>
+                <th>Col-1</th>
+                <th>Col-2</th>
+                <th>Col-3</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1-1</td>
+                <td>1-2</td>
+                <td rowspan="2">3</td>
+            </tr>
+            <tr>
+                <td>2-1</td>
+                <td>2-2</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Resume-1</td>
+                <td colspan="2">Resume value</td>
+                
+            </tr>
+        </tfoot>
+    </table> -->
+    <table>
+        <caption></caption>
+        <thead>
+            <tr>
+                <th>Choose plan</th>
+                <th>
+                   <p>starter</p>
+                   <h2>$10</h2>
+                   <p>per month</p> 
+                </th>
+                <th>
+                    <p>econom</p>
+                    <h2>$30</h2>
+                    <p>per month</p> 
+                </th>
+                <th>
+                    <p>standard</p>
+                    <h2>$50</h2>
+                    <p>per month</p> 
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Lorem, ipsum dolor.</td>
+                <td>20</td>
+                <td>45</td>
+                <td>50</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor sit.</td>
+                <td>5</td>
+                <td>23</td>
+                <td>44</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor sit amet.</td>
+                <td>45</td>
+                <td>66</td>
+                <td>55</td>
+            </tr>
+            <tr>
+                <td>Lorem, ipsum dolor.</td>
+                <td>55</td>
+                <td>700</td>
+                <td>111</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor sit.</td>
+                <td>100</td>
+                <td>300</td>
+                <td>800</td>
+            </tr>
+            <tr>
+                <td>Lorem, ipsum.</td>
+                <td>222</td>
+                <td>11</td>
+                <td>999</td>
+            </tr>
+            <tr>
+                <td>Lorem ipsum dolor sit.</td>
+                <td>10-0</td>
+                <td>333</td>
+                <td>22</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td>
+                    <a href="#">start</a>
+                </td>
+                <td>
+                    <a href="#">start</a>
+                </td>
+                <td>
+                    <a href="#">start</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
